[tool.poetry]
name = "smage"
version = "0.1.0"
description = "Docker image for Sagemaker"
authors = ["Hironori <stdiff@outlook.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.7.0"
tensorflow = "2.2"
transformers = "3.5.1"
altair = "^4.1.0"
pandas = "1.1.5"
numpy = "1.19.5"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
scipy = "~1.4"
black = "^21.5b1"
black-nb = "^0.5.0"
isort = "^5.8.0"
ipykernel = "^5.5.5"
boto3 = "^1.17.73"
sagemaker = "^2.40.0"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
