[tool.poetry]
name = "smage"
version = "0.1.0"
description = "Docker image for Sagemaker"
authors = ["Hironori <stdiff@outlook.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
ipykernel = "^5.5.5"
boto3 = "1.20.43"
sagemaker = "2.73.0"

numpy = "1.21.0"
pandas = "1.3.5"
scikit-learn = "1.0.2"
scipy = "^1.7.0"
altair = "4.2.0"
torch = {version = "^1.9.0", python = "~3.9", platform = "linux"}
torchvision = {version = "^0.10.0", python = "~3.9", platform = "linux"}
torchaudio = {version = "^0.9.0", python = "~3.9", platform = "linux"}
torchtext = {version = "^0.10.0", python = "~3.9", platform = "linux"}
onnxruntime = "1.9.0"
pytorch-lightning = "1.6.1"
transformers = "4.15.0"
datasets = "1.18.1"
ray = {version = "~1.6.0", extras = ["default"]}
torchviz = "^0.0.2"
ipywidgets = "7.4.0"
tqdm = "4.62.3"
sagemaker-training = "4.0.1"
pydantic = "1.8.2"
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.2.0/en_core_web_md-3.2.0-py3-none-any.whl"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
