[tool.poetry]
name = "smage"
version = "0.1.0"
description = "Docker image for Sagemaker"
authors = ["Hironori <stdiff@outlook.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.9,<3.10"
ipykernel = "^5.5.5"
boto3 = "1.20.43"
sagemaker = "2.73.0"

numpy = "1.23.5"
pandas = "1.5.3"
scikit-learn = "1.2.2"
scipy = "1.9.1"
altair = "4.2.2"
torch = {version = "1.13.1", python = ">3.9,<3.10", platform = "linux"}
torchvision = {version = "0.14.1", python = ">3.9,<3.10", platform = "linux"}
torchaudio = {version = "0.13.1", python = ">3.9,<3.10", platform = "linux"}
torchtext = {version = "0.14.1", python = ">3.9,<3.10", platform = "linux"}
onnxruntime = "1.9.0"
pytorch-lightning = {version = "1.9.5", python = ">3.9,<3.10", platform = "linux"}
transformers = "4.15.0"
datasets = "1.18.1"
ray = {version = "~1.6.0", extras = ["default"]}
torchviz = "^0.0.2"
ipywidgets = "7.4.0"
tqdm = "4.62.3"
sagemaker-training = "4.1.4"
pydantic = "1.8.2"
spacy = "3.4.4"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
